Changed the text on the confirm user page Added some spacing between the extra fields and the save progress buttons on the input form Added a tooltip to contract number Fixed a spacing issue on the account page Fixed an issue on the confirm page where the yaml button wasn't showing up

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1055,7 +1055,7 @@ html, button, body, input, select, textarea, p {
 }
 
 .adv-search-dropdown {
-  background-color: #F9F9F9;
+  background-color: #FCFCFC;
   border: 1px solid rgb(68, 68, 68);
   padding: 20px;
   position: absolute;
@@ -1211,6 +1211,7 @@ html, button, body, input, select, textarea, p {
   font-size: 18.72px;
   font-weight: 300;
   padding-left: 0px;
+  margin-left: 0px;
 }
 
 
